apps/miniflux/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: miniflux
  namespace: traefik
spec:
  entryPoints:
    - frp
  routes:
    - match: Host(`rss.${DOMAIN}`)
      kind: Rule
      middlewares:
        - name: frp-headers
          namespace: traefik
        - name: authelia-auth
          namespace: traefik
      services:
        - name: miniflux
          port: 8080
          namespace: miniflux
